[tool.poetry]
name = "antlr_tutorial"
version = "0.1.0"
description = ""
authors = ["Ali Ghahraei Figueroa <ali.ghahraei@spectrumeffect.com>"]

[tool.poetry.dependencies]
python = "^3.8"
antlr4-python3-runtime = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
